--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "blake-hash": "^1.1.0",
     "ganache-cli": "^6.4.2",
     "openzeppelin-solidity": "^2.2.0",
+    "snarkjs": "^0.1.11",
     "web3": "^1.0.0-beta.52"
   }
 }
