--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ganache-cli": "^6.4.2",
     "openzeppelin-solidity": "^2.2.0",
     "snarkjs": "^0.1.11",
+    "solc": "^0.4.2",
     "web3": "^1.0.0-beta.52"
   }
 }
