--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/DalaiLlaama/snappframes#readme",
   "dependencies": {
     "blake-hash": "^1.1.0",
+    "circom": "0.0.24",
     "ganache-cli": "^6.4.2",
     "openzeppelin-solidity": "^2.2.0",
     "snarkjs": "^0.1.11",
     "solc": "^0.4.2",
+    "truffle": "^5.0.12",
     "web3": "^1.0.0-beta.52"
   }
 }
